force-app/main/default/objects/Bonus_Distribution__c/Bonus_Distribution__c.object-meta.xml
<CustomObject>
    <label>Bonus Distribution</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>BDN</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonus Distribution</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>