force-app/main/default/objects/Bonus_Distribution__c/fields/ATTN_Contact__c.field-meta.xml
<CustomField>
    <fullName>ATTN_Contact__c</fullName>
    <label>ATTN Contact</label>
    <type>TextArea</type>
</CustomField>