force-app/main/default/objects/Bonus_Distribution__c/fields/Date_and_Name__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Name__c</fullName>
    <formula
  >LPAD(TEXT(MONTH(Date_of_Event__c )), 2,&quot;0&quot;)&amp;&quot;-&quot;&amp; 
LPAD(TEXT(DAY(Date_of_Event__c)), 2,&quot;0&quot;)&amp;&quot; - &quot;&amp; 
 Event__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date and Name</label>
    <type>Text</type>
</CustomField>