force-app/main/default/objects/Bonus_Distribution__c/fields/Date_and_Name_Link__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Name_Link__c</fullName>
    <formula>CASE(RecordTypeId,
&quot;01214000000AX7T&quot;,LPAD(TEXT(MONTH(Date_of_Event__c )), 2,&quot;0&quot;)&amp;&quot;-&quot;&amp; 
LPAD(TEXT(DAY(Date_of_Event__c)), 2,&quot;0&quot;)&amp;&quot; &quot;&amp;HYPERLINK(&quot;/&quot;&amp;Event_Name__r.Id , Event_Name__r.Name),
&quot;01214000000AX7O&quot;,LPAD(TEXT(MONTH(Date_of_Event__c )), 2,&quot;0&quot;)&amp;&quot;-&quot;&amp; 
LPAD(TEXT(DAY(Date_of_Event__c)), 2,&quot;0&quot;)&amp;&quot; &quot;&amp;HYPERLINK(&quot;/&quot;&amp;Partner_Event__r.Id, Partner_Event__r.Name),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date and Name Link</label>
    <type>Text</type>
</CustomField>