force-app/main/default/objects/Bonus_Distribution__c/fields/Date_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Event__c</fullName>
    <description>Shows the Event Date or the Partner Event Date</description>
    <formula
  >IF( Event_Name__c &lt;&gt;&quot;&quot;,  Event_Name__r.Event_Start_Date__c,
IF( Partner_Event__c &lt;&gt; &quot;&quot;, Partner_Event__r.Start_Date__c ,
  Distribution_Date__c   ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Event</label>
    <type>Date</type>
</CustomField>