force-app/main/default/objects/Bonus_Distribution__c/fields/Earliest_Date_Shipments_May_Arrive__c.field-meta.xml
<CustomField>
    <fullName>Earliest_Date_Shipments_May_Arrive__c</fullName>
    <formula>Event_Name__r.Earliest_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earliest Date Shipments May Arrive</label>
    <type>Date</type>
</CustomField>