force-app/main/default/objects/Bonus_Distribution__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description
  >Shows the event name whether it&apos;s a partner event or internal.</description>
    <formula>IF( Event_Name__c &lt;&gt;&quot;&quot;,  Event_Name__r.Name,
IF( Partner_Event__c &lt;&gt; &quot;&quot;, Partner_Event__r.Name,
Notes__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event</label>
    <type>Text</type>
</CustomField>