force-app/main/default/objects/Bonus_Distribution__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <formula>Event_Name__r.Event_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Date</label>
    <type>Date</type>
</CustomField>