force-app/main/default/objects/Bonus_Distribution__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Name</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipName>Bonus_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>