force-app/main/default/objects/Bonus_Distribution__c/fields/Issue_Name__c.field-meta.xml
<CustomField>
    <fullName>Issue_Name__c</fullName>
    <label>Issue Name</label>
    <referenceTo>Issue__c</referenceTo>
    <relationshipName>Bonus_Distributions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>