force-app/main/default/objects/Bonus_Distribution__c/fields/Last_Day_to_Ship__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_to_Ship__c</fullName>
    <formula>Event_Name__r.Earliest_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Day to Ship</label>
    <type>Date</type>
</CustomField>