force-app/main/default/objects/Bonus_Distribution__c/fields/Mark_as_Sent_List_View__c.field-meta.xml
<CustomField>
    <fullName>Mark_as_Sent_List_View__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &quot;Requested&quot;), 
HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/e?&amp;00N1400000BSJer=Sent&amp;save=1&amp;retURL=%2Fa0s%3Ffcf%3D00B1O00000APqtA&quot;, &quot;Mark as Sent&quot;), 
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mark as Sent LV</label>
    <type>Text</type>
</CustomField>