force-app/main/default/objects/Bonus_Distribution__c/fields/Name_Link__c.field-meta.xml
<CustomField>
    <fullName>Name_Link__c</fullName>
    <formula>CASE(RecordTypeId,
&quot;01214000000AX7T&quot;,HYPERLINK(&quot;/&quot;&amp;Event_Name__r.Id , &quot;View Event&quot;),
&quot;01214000000AX7O&quot;,HYPERLINK(&quot;/&quot;&amp;Partner_Event__r.Id, &quot;View Event&quot;),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Link</label>
    <type>Text</type>
</CustomField>