force-app/main/default/objects/Bonus_Distribution__c/fields/Partner_Event__c.field-meta.xml
<CustomField>
    <fullName>Partner_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Event</label>
    <referenceTo>Partner_Event__c</referenceTo>
    <relationshipName>Bonus_Distributions</relationshipName>
    <type>Lookup</type>
</CustomField>