force-app/main/default/objects/Bonus_Distribution__c/fields/Partner_Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Partner_Event_Date__c</fullName>
    <formula>Partner_Event__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Event Date</label>
    <type>Date</type>
</CustomField>