force-app/main/default/objects/Bonus_Distribution__c/fields/QTY__c.field-meta.xml
<CustomField>
    <fullName>QTY__c</fullName>
    <label>QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>