force-app/main/default/objects/Bonus_Distribution__c/fields/Reg_Target__c.field-meta.xml
<CustomField>
    <fullName>Reg_Target__c</fullName>
    <formula>Event_Name__r.Targeted_Registration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reg Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>