force-app/main/default/objects/Bonus_Distribution__c/fields/Ship_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address__c</fullName>
    <formula>Event_Name__r.Ship_To_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Address</label>
    <type>Text</type>
</CustomField>