force-app/main/default/objects/Bonus_Distribution__c/fields/Ship_To_Address_combined__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address_combined__c</fullName>
    <formula>CASE(RecordTypeId, 
&quot;01214000000AX7T&quot;, Event_Name__r.Ship_To_Address__c,
&quot;01214000000AX7O&quot;, Ship_To_Address_Text__c, 
NULL 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship To Address</label>
    <type>Text</type>
</CustomField>