force-app/main/default/objects/Bonus_Distribution__c/fields/Ship_To_Address_Text__c.field-meta.xml
<CustomField>
    <fullName>Ship_To_Address_Text__c</fullName>
    <label>Ship To Address</label>
    <type>TextArea</type>
</CustomField>