force-app/main/default/objects/Bonus_Distribution__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id, &quot;View&quot;)
&amp;&quot; | &quot;&amp;
HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/e?retURL=%2F&quot;&amp;Id, &quot;Edit&quot;)
&amp;&quot; | &quot;&amp;
CASE(RecordTypeId, 
&quot;01214000000AX7T&quot;,HYPERLINK(&quot;/&quot;&amp;Event_Name__r.Id , &quot;Event Link&quot;), 
&quot;01214000000AX7O&quot;,HYPERLINK(&quot;/&quot;&amp;Partner_Event__r.Id, &quot;Event Link&quot;), 
NULL 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View / Edit</label>
    <type>Text</type>
</CustomField>