force-app/main/default/objects/Bonus_Distribution__c/fields/View_Status__c.field-meta.xml
<CustomField>
    <fullName>View_Status__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &quot;Requested&quot;),
HYPERLINK(&quot;/&quot;&amp;Id&amp;&quot;/e?&amp;00N1400000BSJer=Sent&amp;save=1&amp;retURL=%2F&quot;&amp;Id, &quot;Mark as Sent&quot;),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mark as Sent</label>
    <type>Text</type>
</CustomField>