force-app/main/default/objects/Bonus_Distribution__c/recordTypes/eRepublic_Event.recordType-meta.xml
<RecordType>
    <fullName>eRepublic_Event</fullName>
    <active>true</active>
    <description
  >Bonus distribution request to send issues to one our e.Republic events.</description>
    <label>e.Republic Event</label>
</RecordType>