force-app/main/default/objects/Bonus_Distribution__c/recordTypes/Other_Distribution.recordType-meta.xml
<RecordType>
    <fullName>Other_Distribution</fullName>
    <active>true</active>
    <description
  >Any distribution request not being sent to an event, such as client copies</description>
    <label>Other Distribution</label>
</RecordType>