force-app/main/default/objects/Bonus_Distribution__c/recordTypes/Partner_Event.recordType-meta.xml
<RecordType>
    <fullName>Partner_Event</fullName>
    <active>true</active>
    <description
  >Bonus distribution request to send issues to a partner event (not hosted by e.Republic).</description>
    <label>Partner Event</label>
</RecordType>