force-app/main/default/objects/Bonus_Distribution__c/validationRules/Cannot_Create_a_BD_Request_in_the_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Create_a_BD_Request_in_the_past</fullName>
    <active>false</active>
    <description
  >You cannot create a bonus distribution request for an event in the past.</description>
    <errorConditionFormula
  >Date_of_Event__c &lt; TODAY()&amp;&amp;ISNEW()</errorConditionFormula>
    <errorMessage
  >You cannot create a bonus distribution request for an event in the past.</errorMessage>
</ValidationRule>