force-app/main/default/objects/Bonus_Distribution__c/listViews/Completed_Requests_All_Events_20191.listView-meta.xml
<ListView>
    <fullName>Completed_Requests_All_Events_20191</fullName>
    <columns>View__c</columns>
    <columns>Date_of_Event__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Event__c</columns>
    <columns>Issue_Name__c</columns>
    <columns>QTY__c</columns>
    <columns>Status__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sent,Cancelled</value>
    </filters>
    <filters>
        <field>Date_of_Event__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2019</value>
    </filters>
    <filters>
        <field>Date_of_Event__c</field>
        <operation>lessThan</operation>
        <value>1/1/2020</value>
    </filters>
    <label>Completed Requests - All Events 2019</label>
</ListView>