force-app/main/default/objects/Bonus_Distribution__c/listViews/Current_and_Next_Monthi.listView-meta.xml
<ListView>
    <fullName>Current_and_Next_Monthi</fullName>
    <columns>View__c</columns>
    <columns>Date_of_Event__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Event__c</columns>
    <columns>Issue_Name__c</columns>
    <columns>QTY__c</columns>
    <columns>Status__c</columns>
    <columns>Mark_as_Sent_List_View__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Requested</value>
    </filters>
    <label>Open Requests - All Events</label>
</ListView>